// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots List empty 1`] = `
<div
  className="sc-dnqmqq ereunl"
>
  <div
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#f0efef",
        "color": "#1d1d20",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": "6px 0 18px 20px",
        "width": "100%",
      }
    }
  >
    <div>
      <h2
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        <span>
          Projects
        </span>
      </h2>
      <h1
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHight": 1.25,
            "margin": 0,
          }
        }
      >
        <span>
          Overview
        </span>
      </h1>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "borderRadius": "48px",
          "cursor": "pointer",
          "fontSize": "18px",
          "margin": "0",
          "minHeight": "48px",
          "outline": "none",
          "padding": "0",
        }
      }
    >
      <svg
        style={
          Object {
            "fill": "#1d1d20",
            "height": "60px",
            "width": "60px",
          }
        }
        viewBox="0 0 60 60"
      >
        <path
          d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-htoDjs cNnnvC"
  >
    <p
      style={
        Object {
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "18px",
          "fontWeight": 200,
          "lineHeight": "1.33em",
          "margin": 0,
        }
      }
    >
      project.list.noProjects
       
    </p>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#a6a7aa",
        "border": "none",
        "borderRadius": "48px",
        "bottom": "10px",
        "cursor": "pointer",
        "fontSize": "18px",
        "height": "60px",
        "margin": "0",
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
        "position": "fixed",
        "right": "10px",
      }
    }
  >
    <svg
      style={
        Object {
          "fill": "#1d1d20",
          "height": "60px",
          "width": "60px",
        }
      }
      viewBox="0 0 60 60"
    >
      <path
        d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
        fillRule="evenodd"
      />
    </svg>
  </button>
  <div
    style={
      Object {
        "backgroundColor": "#f0efef",
        "color": "#1d1d20",
        "maxWidth": "360px",
        "minHeight": "100vh",
        "padding": "18px 20px 27px",
        "position": "fixed",
        "right": 0,
        "textAlign": "left",
        "top": 0,
        "transform": "translateX(100%)",
        "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
        "visibility": 0,
        "width": "100%",
      }
    }
  >
    <ul
      className="sc-fjdhpX gRTSXn"
    >
      <li
        className="sc-jzJRlG kEYdqt"
      >
        Edit Project settings
      </li>
      <li
        className="sc-jzJRlG kEYdqt"
      >
        Delete project
      </li>
      <li
        className="sc-jzJRlG kEYdqt"
      >
        User settings
      </li>
      <li
        className="sc-jzJRlG kEYdqt"
      >
        Log Out
      </li>
    </ul>
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "borderRadius": "48px",
          "cursor": "pointer",
          "fontSize": "18px",
          "margin": "0",
          "minHeight": "48px",
          "outline": "none",
          "padding": "0",
          "position": "absolute",
          "right": 0,
          "top": "6px",
        }
      }
    >
      <svg
        style={
          Object {
            "fill": "#1d1d20",
            "height": "60px",
            "width": "60px",
          }
        }
        viewBox="0 0 60 60"
      >
        <path
          d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots List list 1`] = `
<div
  className="sc-dnqmqq ereunl"
>
  <div
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#f0efef",
        "color": "#1d1d20",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": "6px 0 18px 20px",
        "width": "100%",
      }
    }
  >
    <div>
      <h2
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        <span>
          Projects
        </span>
      </h2>
      <h1
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHight": 1.25,
            "margin": 0,
          }
        }
      >
        <span>
          Overview
        </span>
      </h1>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "borderRadius": "48px",
          "cursor": "pointer",
          "fontSize": "18px",
          "margin": "0",
          "minHeight": "48px",
          "outline": "none",
          "padding": "0",
        }
      }
    >
      <svg
        style={
          Object {
            "fill": "#1d1d20",
            "height": "60px",
            "width": "60px",
          }
        }
        viewBox="0 0 60 60"
      >
        <path
          d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
  <ul
    className="sc-iwsKbI dZLTHj"
  >
    <li
      className="sc-gZMcBi dFerLZ"
    >
      <div
        style={
          Object {
            "backgroundColor": "#f0efef",
            "borderTop": "2px solid #1d1d20",
            "color": "#1d1d20",
            "display": "flex",
            "flexDirection": "column",
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "padding": "12px 14px 14px",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#a6a7aa",
              "fontSize": "12px",
              "marginBottom": "14px",
            }
          }
        >
          <ul
            className="sc-gqjmRU Uwame"
          >
            <li
              className="sc-VigVT elihoU"
            >
              3 months ago
            </li>
            <li
              className="sc-VigVT elihoU"
            >
              Status
            </li>
            <li
              className="sc-VigVT elihoU"
            >
              Firstname Lastname
            </li>
          </ul>
        </div>
        <h1
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Project Name
        </h1>
        <div
          className="sc-jTzLTM qSBbn"
          onClick={[Function]}
        >
          <p
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "18px",
                "fontWeight": 200,
                "lineHeight": "1.33em",
                "margin": 0,
              }
            }
          >
            Description
          </p>
        </div>
        <span
          style={
            Object {
              "color": "#a6a7aa",
              "display": "block",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "12px",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
              "width": "100%",
            }
          }
        >
          schemacms/api/project_title
        </span>
      </div>
    </li>
    <li
      className="sc-gZMcBi dFerLZ"
    >
      <div
        style={
          Object {
            "backgroundColor": "#f0efef",
            "borderTop": "2px solid #1d1d20",
            "color": "#1d1d20",
            "display": "flex",
            "flexDirection": "column",
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "padding": "12px 14px 14px",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#a6a7aa",
              "fontSize": "12px",
              "marginBottom": "14px",
            }
          }
        >
          <ul
            className="sc-gqjmRU Uwame"
          >
            <li
              className="sc-VigVT elihoU"
            >
              3 months ago
            </li>
            <li
              className="sc-VigVT elihoU"
            >
              Published
            </li>
            <li
              className="sc-VigVT elihoU"
            >
              Tadeusz Kosciuszko
            </li>
          </ul>
        </div>
        <h1
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Honec sodales libero non fermentum aliquam
        </h1>
        <div
          className="sc-jTzLTM qSBbn"
          onClick={[Function]}
        >
          <p
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "18px",
                "fontWeight": 200,
                "lineHeight": "1.33em",
                "margin": 0,
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie fermentum dictum. In id posuere nibh.
          </p>
        </div>
        <span
          style={
            Object {
              "color": "#a6a7aa",
              "display": "block",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "12px",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
              "width": "100%",
            }
          }
        >
          schemacms/api/wuwhonec-sodales-libero-non-fermentum-aliquam-honec-sodales-libero-non-fermentum-aliquam
        </span>
      </div>
    </li>
  </ul>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#a6a7aa",
        "border": "none",
        "borderRadius": "48px",
        "bottom": "10px",
        "cursor": "pointer",
        "fontSize": "18px",
        "height": "60px",
        "margin": "0",
        "minHeight": "48px",
        "outline": "none",
        "padding": "0",
        "position": "fixed",
        "right": "10px",
      }
    }
  >
    <svg
      style={
        Object {
          "fill": "#1d1d20",
          "height": "60px",
          "width": "60px",
        }
      }
      viewBox="0 0 60 60"
    >
      <path
        d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
        fillRule="evenodd"
      />
    </svg>
  </button>
  <div
    style={
      Object {
        "backgroundColor": "#f0efef",
        "color": "#1d1d20",
        "maxWidth": "360px",
        "minHeight": "100vh",
        "padding": "18px 20px 27px",
        "position": "fixed",
        "right": 0,
        "textAlign": "left",
        "top": 0,
        "transform": "translateX(100%)",
        "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
        "visibility": 0,
        "width": "100%",
      }
    }
  >
    <ul
      className="sc-fjdhpX gRTSXn"
    >
      <li
        className="sc-jzJRlG kEYdqt"
      >
        Edit Project settings
      </li>
      <li
        className="sc-jzJRlG kEYdqt"
      >
        Delete project
      </li>
      <li
        className="sc-jzJRlG kEYdqt"
      >
        User settings
      </li>
      <li
        className="sc-jzJRlG kEYdqt"
      >
        Log Out
      </li>
    </ul>
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "borderRadius": "48px",
          "cursor": "pointer",
          "fontSize": "18px",
          "margin": "0",
          "minHeight": "48px",
          "outline": "none",
          "padding": "0",
          "position": "absolute",
          "right": 0,
          "top": "6px",
        }
      }
    >
      <svg
        style={
          Object {
            "fill": "#1d1d20",
            "height": "60px",
            "width": "60px",
          }
        }
        viewBox="0 0 60 60"
      >
        <path
          d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;
